linear regression I done

--- a/Estatísticas com Python parte 2 - probabilidade e amostragem/Estimativas.ipynb
+++ b/Estatísticas com Python parte 2 - probabilidade e amostragem/Estimativas.ipynb
@@ -735,7 +735,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "m4qMQ4kdKa9W"
+    "id": "m4qMQ4kdKa9W",
+    "tags": []
    },
    "source": [
     "# <font color='blue'>Solução do item 1</font>"
@@ -848,7 +849,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "waULC4fmKa9i"
+    "id": "waULC4fmKa9i",
+    "tags": []
    },
    "source": [
     "# <font color='blue'>Solução do item 2</font>"
@@ -886,6 +888,25 @@
    "source": [
     "e = 0.10 * media_amostra\n",
     "print(\"A margem de erro é de R$ %0.2f para mais ou para menos\" % (e))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fórmula de desvio padrão conhecido\n",
+    "\n",
+    "## $$n = \\left(z\\frac{\\sigma}{e}\\right)^2$$\n",
+    "\n",
+    "Onde:\n",
+    "\n",
+    "$z$ = variável normal padronizada\n",
+    "\n",
+    "$\\sigma$ = desvio padrão populacional\n",
+    "\n",
+    "$s$ = desvio padrão amostral\n",
+    "\n",
+    "$e$ = erro inferencial"
    ]
   },
   {
@@ -1055,7 +1076,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "n3dILIrGKa93"
+    "id": "n3dILIrGKa93",
+    "tags": []
    },
    "source": [
     "# <font color='blue'>Solução do item 3</font>"
@@ -1149,7 +1171,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "0HVhFFfMKa-A"
+    "id": "0HVhFFfMKa-A",
+    "tags": []
    },
    "source": [
     "# <font color='blue'>Solução do item 4</font>"
@@ -1184,7 +1207,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "n8uxkOcPKa-D"
+    "id": "n8uxkOcPKa-D",
+    "tags": []
    },
    "source": [
     "# <font color='blue'>Solução do item 5</font>"
